// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms/Input Default 1`] = `
<input
  className="sc-AxjAm PKNeD"
  onChange={[Function]}
  value=""
/>
`;

exports[`Storyshots atoms/Input With Text 1`] = `
<input
  autoFocus={true}
  className="sc-AxjAm PKNeD"
  onChange={[Function]}
  value="all-cats"
/>
`;
